# c-labs

./: CMakeLists.txt  README.md  bin.c  fact.c  fib.c  field.c  half.c  last.c  last.cpp  main.c  merge.c  min.c  narc.c  neigh.cpp  odd.c  pair.c  perf.c  pri.c  prime.c  rectangle.c  ring.c  scale.c  seg.c  semi.c  seq.c  sol.c  spirala.c  square.c  stamp.c  tri.c
