cmake_minimum_required(VERSION 3.17)
project(pi C)

set(CMAKE_C_STANDARD 99)

add_executable(pi main.c prime.c fib.c perf.c half.c narc.c scale.c pri.c min.c pair.c fact.c merge.c neigh.cpp spirala.c square.c field.c rom.c tri.c rectangle.c bin.c seg.c stamp.c odd.c last.cpp seq.c ring.c semi.c sol.c)